force-app/main/default/objects/Account/fields/abp2__c.field-meta.xml
<CustomField>
    <fullName>abp2__c</fullName>
    <label>abp2</label>
    <length>22</length>
    <type>Text</type>
</CustomField>