force-app/main/default/objects/Account/fields/azarfield__c.field-meta.xml
<CustomField>
    <fullName>azarfield__c</fullName>
    <label>azarfield</label>
    <length>55</length>
    <type>Text</type>
</CustomField>