force-app/main/default/objects/Account/fields/back_promotion_automation_chandu__c.field-meta.xml
<CustomField>
    <fullName>back_promotion_automation_chandu__c</fullName>
    <label>back promotion automation chandu</label>
    <length>66</length>
    <type>Text</type>
</CustomField>