force-app/main/default/objects/Account/fields/customfieldshireesha__c.field-meta.xml
<CustomField>
    <fullName>customfieldshireesha__c</fullName>
    <label>customfieldshireesha</label>
    <length>150</length>
    <type>Text</type>
</CustomField>