force-app/main/default/objects/Account/fields/FPFLS__c.field-meta.xml
<CustomField>
    <fullName>FPFLS__c</fullName>
    <label>FPFLS</label>
    <length>88</length>
    <type>Text</type>
</CustomField>