force-app/main/default/objects/Account/fields/HARITEXT__c.field-meta.xml
<CustomField>
    <fullName>HARITEXT__c</fullName>
    <label>HARITEXT</label>
    <length>55</length>
    <type>Text</type>
</CustomField>