force-app/main/default/objects/Account/fields/HARITEXT_customised__c.field-meta.xml
<CustomField>
    <fullName>HARITEXT_customised__c</fullName>
    <label>HARITEXT</label>
    <length>55</length>
    <type>Text</type>
</CustomField>