force-app/main/default/objects/Account/fields/javierfield1__c.field-meta.xml
<CustomField>
    <fullName>javierfield1__c</fullName>
    <label>javierfield1</label>
    <length>44</length>
    <type>Text</type>
</CustomField>