force-app/main/default/objects/Account/fields/mounikavakkalagad__c.field-meta.xml
<CustomField>
    <fullName>mounikavakkalagad__c</fullName>
    <label>mounikavakkalagad</label>
    <length>60</length>
    <type>Text</type>
</CustomField>