force-app/main/default/objects/Account/fields/narendrascheduledBP__c.field-meta.xml
<CustomField>
    <fullName>narendrascheduledBP__c</fullName>
    <label>narendrascheduledBP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>