force-app/main/default/objects/Account/fields/rollbacktestfield__c.field-meta.xml
<CustomField>
    <fullName>rollbacktestfield__c</fullName>
    <label>rollbacktestfield</label>
    <length>100</length>
    <type>Text</type>
</CustomField>