force-app/main/default/objects/Account/fields/schedulled_bpchandu_sep__c.field-meta.xml
<CustomField>
    <fullName>schedulled_bpchandu_sep__c</fullName>
    <label>schedulled bpchandu sep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>