force-app/main/default/objects/Account/fields/susfield__c.field-meta.xml
<CustomField>
    <fullName>susfield__c</fullName>
    <label>susfield</label>
    <length>77</length>
    <type>Text</type>
</CustomField>